# meluxina

./: .gitignore  first-job.sh  module-job.sh  parallel_phi4_test.py  phi4-test-job.sh  phi4_test.py  python-job.sh  requirements.txt  run-models.py  translate-hits.py  translate-job.sh  translate-split-hits.py  translate-split-job.sh
eda/: eda.py  pyproject.toml  pyrightconfig.json
rq1/: dump_schema.py  (+33 more)
rq2/: condensed_llama_ontology.txt  condensed_phi4_ontology.txt  dump_triples.py  join-ontology.py  main.py  models.py  pyproject.toml  rdf_utils.py  requirements.txt  rq2-job.sh  rq2-ontology-job.sh  rq2-ontology-threaded-job.sh  rq2-ontology-threaded.py  rq2-ontology.py  rq2-rdf2vec-preparation.py  rq2-reddit-preparation-job.sh  rq2-refined-adhv-ontology-job.sh  rq2-results.py  rq2.py  rq2_refine_adhv_ontology.py  simple_visualize_rdf.py  visualize_rdf.py
rq2-rdf/: main.py  models.py  pyproject.toml  rq2-rdf2vec.py
rq2-rebel/: README.md  models.py  pyproject.toml  requirements.txt  rq2-deepseek-job.sh  rq2-deepseek-qwen-job.sh  rq2-deepseek-qwen.py  rq2-deepseek.py  rq2-llama-job.sh  rq2-llama.py  rq2-rebel-results.py  rq2-rebel-subjects-only.py  rq2-rebel.py  rq2_generic.py
rq2-rebel/results/: rq2-results-group-by-article-deepseek-qwen.json  rq2-results-group-by-article-deepseek.json  rq2-results-group-by-article-llama.json  rq2-results-group-by-chunk-llama.json  rq2-results-group-by-triple-deepseek-qwen.json  rq2-results-group-by-triple-deepseek.json  rq2-results-group-by-triple-llama.json
rq2/results/: rq2_meta-llama_Llama-3.3-70B-Instruct.json  rq2_microsoft_phi-4.json  rq2_refined_meta-llama_Llama-3.3-70B-Instruct_generated_by_condensed_llama_ontology.json  (+3 more)
(+66 files in other folders)
