[project]
name = "rq2-rebel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "faiss-cpu>=1.10.0",
    "llama-index>=0.12.31",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "unidecode>=1.3.8",
]
