[project]
name = "rq2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "llama-index>=0.12.26",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pydantic>=2.11.1",
    "pydot>=3.0.4",
    "pyvis>=0.3.2",
    "rdflib>=7.1.4",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.1",
    "transformers>=4.50.3",
]
